<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>road_depature_preventer</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sora_ebita@jp.honda">ebita</maintainer>
  <license>TODO: License declaration</license>

  <depend>common_python</depend>
  <depend>can_msgs</depend>
  <depend>vehicle</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
